--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "appwrite": "^14.0.1",
     "class-variance-authority": "^0.7.1",
@@ -20,6 +22,7 @@
     "next-themes": "^0.4.4",
     "node-appwrite": "^14.1.0",
     "react": "^19.0.0",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-phone-number-input": "^3.4.11",
