--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "appwrite": "^14.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
